--- a/.github/workflows/good.yaml
+++ b/.github/workflows/good.yaml
@@ -14,7 +14,7 @@ jobs:
       contents: write
     steps:
       - name: "Generator Contributions Grid Snake"
-      - uses: Platane/snk/svg-only@v3
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
@@ -44,7 +44,7 @@ jobs:
            echo "[OK ] Ready for Push to action branch......."
       # push
       - name: "push to action branch"
-      - uses: crazy-max/ghaction-github-pages@v3.1.0
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: action
           build_dir: build
