--- a/.github/workflows/good.yaml
+++ b/.github/workflows/good.yaml
@@ -18,9 +18,8 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            build/github-snake.svg
-            build/github-snake-dark.svg?palette=github-dark
-            build/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            build/gsnake.svg
+            build/gsnake-dark.svg?palette=github-dark
       # readme
       - name: "Generator Readme.md"
         shell: bash
